--- a/individual-work/template-website/styles/_var.scss
+++ b/individual-work/template-website/styles/_var.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 $main-content-bg: #f2f2f2;
 $grid-bg: #d9d9d9;
+$button-clr: #5c4edf;
 $abel: "Abel", sans-serif;
 $anton: "Anton", sans-serif;
 $dosis: "Dosis", sans-serif;
@@ -13,7 +14,7 @@ $wallpoet: "Wallpoet";
 $condensed: "Open Sans Condensed", sans-serif;
 $quicksand: "Quicksand", sans-serif;
 $comfortaa: 'Comfortaa';
-$box-centralization: 8% 12% 12% 12%;
-$box-shadowing: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
+$box-centralization: 6vh 5vw 8vh 5vw;
+$box-shadowing: 0px 0px 20px 0px rgba(0, 0, 0, 0.4);
 $box-radius: 2px;
 $icon-centralization: 6% 10% 0% 10%;
