--- a/individual-work/template-website/styles/style.css
+++ b/individual-work/template-website/styles/style.css
@@ -3,7 +3,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 9vh;
+  height: 11vh;
   background-color: white;
 }
 
@@ -17,7 +17,7 @@
 }
 
 .nav-bar .nav-bar-item:nth-child(1) img {
-  padding: 20%;
+  padding: 15%;
   margin-left: 15%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -44,7 +44,6 @@
 }
 
 .main-content .sub-main-content {
-  background-color: #f2f2f2;
   margin: 7vh 11vw 0vh 11vw;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -90,11 +89,11 @@
 }
 
 .main-content .button button {
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   padding-top: 1.3vh;
-  padding-right: 2rem;
+  padding-right: 2.2rem;
   padding-bottom: 1.3vh;
-  padding-left: 2rem;
+  padding-left: 2.2rem;
   letter-spacing: 1px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
@@ -104,8 +103,8 @@
   border: none;
   color: #fff;
   outline: none;
-  background: -webkit-gradient(linear, left top, right top, from(#594adb));
-  background: linear-gradient(90deg, #594adb);
+  background: -webkit-gradient(linear, left top, right top, from(#5c4edf));
+  background: linear-gradient(90deg, #5c4edf);
   background-size: 300%;
   border-radius: 30px;
   z-index: 1;
@@ -147,8 +146,8 @@
   right: -5px;
   bottom: -5px;
   z-index: -1;
-  background: -webkit-gradient(linear, left top, right top, from(#594adb));
-  background: linear-gradient(90deg, #594adb);
+  background: -webkit-gradient(linear, left top, right top, from(#5c4edf));
+  background: linear-gradient(90deg, #5c4edf);
   background-size: 400%;
   border-radius: 35px;
   -webkit-transition: 1s;
@@ -161,24 +160,27 @@
 }
 
 .main-content .button button:active {
-  background: linear-gradient(32deg, #594adb);
+  background: linear-gradient(32deg, #5c4edf);
 }
 
-.main-content .grid {
-  background-color: #d9d9d9;
+.main-content .grid #3 {
+  z-index: 9;
+  position: relative;
+  background-color: red;
 }
 
 .main-content .grid .sub-grid h1 {
-  margin: 3% 8% 0% 8%;
-  font-size: 1.3rem;
+  margin: 3vh 8vw 0vh 8vw;
+  font-size: 1.7rem;
   font-style: italic;
   font-family: "Open Sans Condensed", sans-serif;
 }
 
 .main-content .grid .sub-grid p {
-  margin: 3% 8% 8% 8%;
-  font-size: .9rem;
+  margin: 3vh 8vw 8vh 8vw;
+  font-size: 1rem;
   font-family: "Comfortaa";
+  color: #808080;
 }
 
 .main-content .grid .sub-grid .A {
@@ -190,10 +192,10 @@
   -ms-flex-direction: column;
   flex-direction: column;
   background-color: white;
-  margin: 8% 12% 12% 12%;
+  margin: 6vh 5vw 8vh 5vw;
   border-radius: 2px;
-  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.4);
 }
 
 .main-content .grid .sub-grid .A img {
@@ -215,10 +217,10 @@
   -ms-flex-direction: column;
   flex-direction: column;
   background-color: white;
-  margin: 8% 12% 12% 12%;
+  margin: 6vh 5vw 8vh 5vw;
   border-radius: 2px;
-  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.4);
 }
 
 .main-content .grid .sub-grid .B img {
@@ -240,10 +242,10 @@
   -ms-flex-direction: column;
   flex-direction: column;
   background-color: white;
-  margin: 8% 12% 12% 12%;
+  margin: 6vh 5vw 8vh 5vw;
   border-radius: 2px;
-  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.4);
 }
 
 .main-content .grid .sub-grid .C img {
@@ -265,10 +267,10 @@
   -ms-flex-direction: column;
   flex-direction: column;
   background-color: white;
-  margin: 8% 12% 12% 12%;
+  margin: 6vh 5vw 8vh 5vw;
   border-radius: 2px;
-  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.4);
 }
 
 .main-content .grid .sub-grid .D img {
@@ -300,7 +302,7 @@
           justify-content: space-between;
   -ms-flex-line-pack: justify;
       align-content: space-between;
-  padding: 5% 10% 5% 10%;
+  padding: 10% 10% 7% 10%;
   height: 25vh;
 }
 
@@ -324,6 +326,7 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
   background-color: #f2f2f2;
+  z-index: 1;
 }
 
 html::-webkit-scrollbar,
