--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -1,4 +1,52 @@
-.nav {
-  background-color: #CBC1B1;
+.nav-bar {
+  background-color: #cbc1b1;
+}
+
+.nav-bar .nav-bar-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 80px;
+  margin: 0 1em 0 1em;
+}
+
+.nav-bar .nav-bar-content .nav-button .line-container {
+  width: 60px;
+  display: block;
+  margin: 50px auto;
+  padding: 8px 10px;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+}
+
+.nav-bar .nav-bar-content .nav-button .line-container div {
+  height: 4px !important;
+  background: #1d1c1c;
+  margin: 7px 0px 7px 0px;
+  border-radius: 25px;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  /* 
+                .line-containerr:hover div {
+                width: 60px;
+            }   */
+}
+
+.nav-bar .nav-bar-content .nav-button .line-container div .one {
+  width: 35px;
+}
+
+.nav-bar .nav-bar-content .nav-button .line-container div .two {
+  width: 35px;
+}
+
+.nav-bar .nav-bar-content .nav-button .line-container div .three {
+  width: 35px;
 }
 /*# sourceMappingURL=styles.css.map */
