--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Lato', sans-serif;
+}
+
 .helo {
   position: absolute;
   z-index: 8;
@@ -55,5 +59,52 @@
 
 .nav-bar-container .nav-bar-sub-container .nav-button .line-container div .three {
   width: 30px;
+}
+
+.content-container .welcome-banner {
+  background-color: #7c7474;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  /* justify-items: center; */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 3em 2em 3em 2em;
+}
+
+.content-container .welcome-banner h1 {
+  color: #f8f7ec;
+  margin: 1em;
+}
+
+.content-container .welcome-banner p {
+  margin: 1em;
+  color: #f8f7ec;
+  text-align: center;
+}
+
+.content-container .welcome-banner button {
+  margin: 1em;
+  padding: 0 1.4em 0 1.4em;
+  background-color: #a19b98;
+  border: #a19b98 1px solid;
+  font-size: 0.9rem;
+  -webkit-box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+}
+
+.content-container .offers-section .offer-section-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 /*# sourceMappingURL=styles.css.map */
