--- a/individual-work/pitra-2k-web-figma-1/styles/_global.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_global.scss
@@ -1,3 +1,26 @@
+/* VARIABLES */
 $nav-bar-line-width: 30px;
 $general-text-color: #f8f7ec;
-$general-text-color-black: #000000;
+
+
+/* MIXINS */
+@mixin offers-flex-settings{
+    display: flex;
+    flex-direction: row;
+    margin: 3em;
+}
+@mixin sub-offers-flex-and-text-settings{
+    display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                margin: 3%;
+                h3{
+                    font-size: .75rem;
+                    letter-spacing: 1px;
+                }
+                p{
+                   
+                    font-size: .6rem;
+                    color: #777774;
+                }
+}
