--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -2,6 +2,8 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+/* VARIABLES */
+/* MIXINS */
 .helo {
   position: absolute;
   z-index: 8;
@@ -85,7 +87,6 @@ body {
 .content-container .welcome-banner p {
   margin: 1em;
   color: #f8f7ec;
-  text-align: center;
 }
 
 .content-container .welcome-banner button {
@@ -99,6 +100,8 @@ body {
 }
 
 .content-container .offers-section .offer-section-1 {
+  /* background: url(/wba-pitra-david-2k/individual-work/pitra-2k-web-figma-1/images/offer1.jpg);
+            background-repeat: no-repeat; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -106,5 +109,121 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  margin: 3em;
+}
+
+.content-container .offers-section .offer-section-1 img {
+  width: 300px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.content-container .offers-section .offer-section-1 .sub-offer-section-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 3%;
+}
+
+.content-container .offers-section .offer-section-1 .sub-offer-section-1 h3 {
+  font-size: .75rem;
+  letter-spacing: 1px;
+}
+
+.content-container .offers-section .offer-section-1 .sub-offer-section-1 p {
+  font-size: .6rem;
+  color: #777774;
+}
+
+.content-container .offers-section .offer-section-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin: 3em;
+}
+
+.content-container .offers-section .offer-section-2 img {
+  width: 300px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.content-container .offers-section .offer-section-2 .sub-offer-section-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 3%;
+}
+
+.content-container .offers-section .offer-section-2 .sub-offer-section-2 h3 {
+  font-size: .75rem;
+  letter-spacing: 1px;
+}
+
+.content-container .offers-section .offer-section-2 .sub-offer-section-2 p {
+  font-size: .6rem;
+  color: #777774;
+}
+
+.content-container .offers-section .offer-section-3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin: 3em;
+}
+
+.content-container .offers-section .offer-section-3 img {
+  width: 300px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.content-container .offers-section .offer-section-3 .sub-offer-section-3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 3%;
+}
+
+.content-container .offers-section .offer-section-3 .sub-offer-section-3 h3 {
+  font-size: .75rem;
+  letter-spacing: 1px;
+}
+
+.content-container .offers-section .offer-section-3 .sub-offer-section-3 p {
+  font-size: .6rem;
+  color: #777774;
 }
 /*# sourceMappingURL=styles.css.map */
