updates in section

--- a/individual-work/pitra-2k-web-figma-1/styles/_var.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_var.scss
@@ -2,3 +2,5 @@ $nav-bar-line-width: 30px;
 $general-text-color: #f8f7ec;
 $general-text-color-black: #000000;
 $header-and-footer-background-color: #cbc1b1;
+$general-background-color: #efeee9;
+$sub-offers-section-text-top-padding: 4vh;
