--- a/individual-work/pitra-2k-web-figma-1/styles/_footer.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_footer.scss
@@ -1,6 +1,11 @@
 .footer-container{
     background-color: $header-and-footer-background-color;
     .footer-information{
-
+        padding: 1em 0 1em 0;
+       /*  border: red 1px solid; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
     }
 }
