--- a/individual-work/pitra-2k-web-figma-1/styles/_mixin.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_mixin.scss
@@ -5,14 +5,22 @@
 @mixin sub-offers-flex-and-text-settings {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  
+  justify-content: center;
+  padding: .8em;
   h3 {
-      font-size: 0.75rem;
-      letter-spacing: 1px;
+    font-size: 0.85rem;
+    letter-spacing: 1px;
   }
   p {
-      font-size: 0.6rem;
-      color: #777774;
+    margin-top: .6em;
+    font-size: 0.6rem;
+    color: #777774;
   }
+}
+@mixin registratin-button {
+  padding: 1% 1.5em 1% 1.5em;
+  background-color: #a19b98;
+  border: #a19b98 1px solid;
+  font-size: 0.9rem;
+  box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
 }
