--- a/individual-work/pitra-2k-web-figma-1/styles/_section.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_section.scss
@@ -13,20 +13,18 @@
             margin: 1em;
         }
         p {
-            margin: 1em;
+            margin: 0 .6em .5em .6em;
             color: $general-text-color;
         }
         button {
-            margin: 1em;
-            padding: 1% 1.5em 1% 1.5em;
-            background-color: #a19b98;
-            border: #a19b98 1px solid;
-            font-size: 0.9rem;
-            box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+            margin: 1.1em;
+            @include registratin-button;
         }
     }
     .offers-section {
         .offers-section-heading {
+            /* border: 1px red solid; */
+            margin-top: 2.3em;
         }
         .offer-section-1 {
             /* background: url(/wba-pitra-david-2k/individual-work/pitra-2k-web-figma-1/images/offer1.jpg);
@@ -35,7 +33,7 @@
                 width:300px;
                 height: fit-content;
             }
-            margin-top: 5vh;
+            margin-top: $sub-offers-section-text-top-padding;
             @include offers-flex-settings;
             .sub-offer-section-1 {
                 @include sub-offers-flex-and-text-settings;
@@ -46,7 +44,7 @@
                 width:300px;
                 height: fit-content;
             }
-            margin-top: 5vh;
+            margin-top: $sub-offers-section-text-top-padding;
             @include offers-flex-settings;
             .sub-offer-section-2 {
                 @include sub-offers-flex-and-text-settings;
@@ -57,11 +55,20 @@
                 width:300px;
                 height: fit-content;
             }
-            margin-top: 5vh;
+            margin-top: $sub-offers-section-text-top-padding;
             @include offers-flex-settings;
             .sub-offer-section-3 {
                 @include sub-offers-flex-and-text-settings;
             }
+        }
+    }
+    .registration-button{
+        display: flex;
+        justify-content: center;
+        margin-top: 2.3em;
+        button{
+            @include registratin-button;  
+            color: $general-text-color;  
         }
     }
 }
