--- a/individual-work/pitra-2k-web-figma-1/styles/styles.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.scss
@@ -1,7 +1,8 @@
-html{
+body{
     /* font-family: 'Lato', sans-serif; */
     /* font-family: 'Smooch Sans', sans-serif; */
-    font-family: 'Hubballi', cursive;
+    font-family: 'Hubballi', cursive;   
+    
 }
 
 @import "var";
