--- a/individual-work/pitra-2k-web-figma-1/styles/_header.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_header.scss
@@ -7,6 +7,7 @@
     background-color: $header-and-footer-background-color;
     position: relative;
     z-index: 9;
+    height: 10vh;
     .nav-bar-sub-container {
         display: flex;
         justify-content: space-between;
