--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -13,6 +13,7 @@ body {
   background-color: #cbc1b1;
   position: relative;
   z-index: 9;
+  height: 10vh;
 }
 
 .nav-bar-container .nav-bar-sub-container {
@@ -138,7 +139,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: .8em;
+  padding: 0.8em;
 }
 
 .content-container .offers-section .offer-section-1 .sub-offer-section-1 h3 {
@@ -147,7 +148,7 @@ body {
 }
 
 .content-container .offers-section .offer-section-1 .sub-offer-section-1 p {
-  margin-top: .6em;
+  margin-top: 0.6em;
   font-size: 0.6rem;
   color: #777774;
 }
@@ -181,7 +182,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: .8em;
+  padding: 0.8em;
 }
 
 .content-container .offers-section .offer-section-2 .sub-offer-section-2 h3 {
@@ -190,7 +191,7 @@ body {
 }
 
 .content-container .offers-section .offer-section-2 .sub-offer-section-2 p {
-  margin-top: .6em;
+  margin-top: 0.6em;
   font-size: 0.6rem;
   color: #777774;
 }
@@ -224,7 +225,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: .8em;
+  padding: 0.8em;
 }
 
 .content-container .offers-section .offer-section-3 .sub-offer-section-3 h3 {
@@ -233,7 +234,7 @@ body {
 }
 
 .content-container .offers-section .offer-section-3 .sub-offer-section-3 p {
-  margin-top: .6em;
+  margin-top: 0.6em;
   font-size: 0.6rem;
   color: #777774;
 }
@@ -260,6 +261,7 @@ body {
 
 .footer-container {
   background-color: #cbc1b1;
+  height: 10vh;
 }
 
 .footer-container .footer-information {
@@ -275,5 +277,129 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.section-content-container {
+  height: 80vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 5vw 0 5vw;
+}
+
+.section-content-container .sub-section-content-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: space-between;
+      -ms-flex-align: space-between;
+          align-items: space-between;
+  /* width: fit-content; */
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(1) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(2) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(3) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(4) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(5) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(6) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=styles.css.map */
