--- a/individual-work/pitra-2k-web-figma-1/styles/_contact-section.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_contact-section.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     margin: 0 5vw 0 5vw;
+    width: 70vw;
     .sub-section-content-container {
         display: flex;
         flex-flow: column;
