--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -288,6 +288,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0 5vw 0 5vw;
+  width: 70vw;
 }
 
 .section-content-container .sub-section-content-container {
