--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   /* font-family: 'Lato', sans-serif; */
   /* font-family: 'Smooch Sans', sans-serif; */
@@ -288,7 +289,6 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0 5vw 0 5vw;
-  width: 70vw;
 }
 
 .section-content-container .sub-section-content-container {
@@ -302,10 +302,10 @@ body {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-align: space-between;
-      -ms-flex-align: space-between;
-          align-items: space-between;
-  /* width: fit-content; */
+  -webkit-box-align: space-evenly;
+      -ms-flex-align: space-evenly;
+          align-items: space-evenly;
+  width: 60vw;
 }
 
 .section-content-container .sub-section-content-container .section-content-item:nth-child(1) {
@@ -319,9 +319,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  /* dát text doleva */
 }
 
 .section-content-container .sub-section-content-container .section-content-item:nth-child(2) {
@@ -335,9 +335,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  /* dát text doleva */
 }
 
 .section-content-container .sub-section-content-container .section-content-item:nth-child(3) {
@@ -351,9 +351,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  /* dát text doleva */
 }
 
 .section-content-container .sub-section-content-container .section-content-item:nth-child(4) {
@@ -367,9 +367,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  /* dát text doleva */
 }
 
 .section-content-container .sub-section-content-container .section-content-item:nth-child(5) {
@@ -383,9 +383,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  /* dát text doleva */
 }
 
 .section-content-container .sub-section-content-container .section-content-item:nth-child(6) {
@@ -399,8 +399,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  /* dát text doleva */
 }
 /*# sourceMappingURL=styles.css.map */
