--- a/individual-work/pitra-2k-web-figma-1/styles/_mixin.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_mixin.scss
@@ -5,8 +5,8 @@
 @mixin contact-section-informations {
   display: flex;
   flex-direction: row;
+  justify-content: space-around; /* dát text doleva */
   align-items: center;
-  justify-content: space-around;/* dát text doleva */
 }
 @mixin sub-offers-flex-and-text-settings {
   display: flex;
@@ -23,10 +23,49 @@
     color: #777774;
   }
 }
-@mixin registratin-button {
-  padding: 1% 1.5em 1% 1.5em;
-  background-color: #a19b98;
-  border: #a19b98 1px solid;
-  font-size: 0.9rem;
-  box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+@mixin registration-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 2.3em;
+  button {
+    padding: 1% 1.5em 1% 1.5em;
+    background-color: #a19b98;
+    border: #a19b98 1px solid;
+    font-size: 0.9rem;
+    box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+    color: $general-text-color;
+  }
+}
+@mixin information-section-module {
+  .section-content-container {
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    margin: 0 5vw 0 5vw;
+    .sub-section-content-container {
+      display: flex;
+      flex-flow: column;
+      justify-content: space-evenly;
+      align-items: space-evenly;
+      width: 60vw;
+      .section-content-item:nth-child(1) {
+        @include contact-section-informations;
+      }
+      .section-content-item:nth-child(2) {
+        @include contact-section-informations;
+      }
+      .section-content-item:nth-child(3) {
+        @include contact-section-informations;
+      }
+      .section-content-item:nth-child(4) {
+        @include contact-section-informations;
+      }
+      .section-content-item:nth-child(5) {
+        @include contact-section-informations;
+      }
+      .section-content-item:nth-child(6) {
+        @include contact-section-informations;
+      }
+    }
+  }
 }
