--- a/individual-work/pitra-2k-web-figma-1/styles/styles.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.scss
@@ -1,8 +1,7 @@
 body{
     /* font-family: 'Lato', sans-serif; */
     /* font-family: 'Smooch Sans', sans-serif; */
-    font-family: 'Hubballi', cursive;   
-    
+    font-family: 'Hubballi', cursive;       
 }
 
 @import "var";
@@ -10,4 +9,4 @@ body{
 @import "header";
 @import "section";
 @import "footer";
-@import "information-section";
+@include information-section-module;
