--- a/individual-work/pitra-2k-web-figma-1/styles/_header.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_header.scss
@@ -1,7 +1,7 @@
-.helo {
+/* .helo {
     position: absolute;
     z-index: 8;
-}
+} */
 
 .nav-bar-container {
     background-color: $header-and-footer-background-color;
