--- a/individual-work/pitra-2k-web-figma-1/styles/_section.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_section.scss
@@ -17,7 +17,7 @@
         }
         button {
             margin: 1.1em;
-            @include registratin-button;
+            /* @include registration-button-mixin; */
         }
     }
     .offers-section {
@@ -59,7 +59,17 @@
             }
         }
         .registration-button {
-            @include registration-button;
+            display: flex;
+            justify-content: center;
+            margin-top: 2.3em;
+            button {
+                padding: 1% 1.5em 1% 1.5em;
+                background-color: #a19b98;
+                border: #a19b98 1px solid;
+                font-size: 0.9rem;
+                box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+                color: red;
+            }
         }
     }
 }
