--- a/individual-work/pitra-2k-web-figma-1/styles/_information-section-module.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_information-section-module.scss
@@ -4,11 +4,15 @@
     justify-content: center;
     margin: 0 5vw 0 5vw;
     .sub-section-content-container {
+      margin: 2vh 0 2vh 0;
       display: flex;
       flex-flow: column;
-      justify-content: space-evenly;
-      align-items: space-evenly;
+      justify-content: space-evenly; 
+      /* align-items: space-evenly; */
       width: 60vw;
+      img{
+        margin-right: 6vw;
+      }
       .section-content-item:nth-child(1) {
         @include contact-section-informations;
       }
