--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+body {
+  /* font-family: 'Lato', sans-serif; */
+  /* font-family: 'Smooch Sans', sans-serif; */
+  font-family: "Hubballi", cursive;
+}
+
 /* .helo {
     position: absolute;
     z-index: 8;
@@ -95,7 +101,7 @@
   font-size: 0.9rem;
   -webkit-box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
-  color: #efeee9;
+  color: #f8f7ec;
 }
 
 .content-container .offers-section .offers-section-heading {
@@ -283,6 +289,7 @@
 }
 
 .section-content-container .sub-section-content-container {
+  margin: 2vh 0 2vh 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -293,10 +300,12 @@
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-align: space-evenly;
-      -ms-flex-align: space-evenly;
-          align-items: space-evenly;
+  /* align-items: space-evenly; */
   width: 60vw;
+}
+
+.section-content-container .sub-section-content-container img {
+  margin-right: 6vw;
 }
 
 .section-content-container .sub-section-content-container .section-content-item:nth-child(1) {
@@ -307,8 +316,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  /* justify-content: space-around; */
   /* dát text doleva */
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -323,8 +331,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  /* justify-content: space-around; */
   /* dát text doleva */
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -339,8 +346,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  /* justify-content: space-around; */
   /* dát text doleva */
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -355,8 +361,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  /* justify-content: space-around; */
   /* dát text doleva */
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -371,8 +376,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  /* justify-content: space-around; */
   /* dát text doleva */
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -387,17 +391,28 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  /* justify-content: space-around; */
   /* dát text doleva */
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-body {
-  /* font-family: 'Lato', sans-serif; */
-  /* font-family: 'Smooch Sans', sans-serif; */
-  font-family: "Hubballi", cursive;
+.contact-content-container {
+  border: 1px red solid;
+}
+
+.contact-content-container .contact-content-sub-container {
+  border: 1px blue solid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=styles.css.map */
